--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 # theme: minima
-remote_theme: pages-themes/hacker@v0.2.0
+theme: hacker
+# remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
 - jekyll-feed
 
 
